--- a/style.css
+++ b/style.css
@@ -34,6 +34,7 @@ body {
   font-family: monospace;
   width: 80%;
   box-shadow: 0px 2px 20px #060613;
+  cursor: pointer;
 }
 
 .stopwatch .buttons {
